# low_latency_layer

./: CMakeLists.txt  README.md  low_latency_layer.json.in
src/: delay_controller.cc  delay_controller.hh  frame_span.cc  frame_span.hh  layer.cc  submission_span.cc  submission_span.hh  timestamp_pool.cc
src/strategies/anti_lag/: device_strategy.cc  device_strategy.hh  queue_strategy.cc  queue_strategy.hh
src/strategies/low_latency2/: device_strategy.cc  queue_strategy.cc  queue_strategy.hh  swapchain_monitor.cc  swapchain_monitor.hh
